tests/valid/case1.js
module.exports = [
    // Valid case 1-1
    {
        data: {
            "teacher": "teacherC@example.com",
            "students":
                [
                    "studentC@example.com"
                ]
        },
        result: {
            statusCode: 204,
            body: undefined,
        }
    }
]